[gd_scene load_steps=9 format=2]

[ext_resource path="res://maps/Test3DViewports/TestViewportLayer1.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/Test3DViewports/TestViewportLayer2.tscn" type="PackedScene" id=2]
[ext_resource path="res://maps/Test3DViewports/Test3DViewportsMap.gd" type="Script" id=3]
[ext_resource path="res://maps/Test3DViewports/MovingCamera.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )
size = Vector2( 1.5, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 1.5, 1 )

[node name="Test3DViewportsMap" type="Spatial"]
script = ExtResource( 3 )

[node name="Layer1QuadMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0.2, 0, -0.4 )
mesh = SubResource( 2 )
material/0 = null

[node name="Layer1" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
usage = 0

[node name="TestViewportLayer1" parent="Layer1" instance=ExtResource( 1 )]

[node name="Layer2QuadMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0.2, 0, -0.35 )
mesh = SubResource( 4 )
material/0 = null

[node name="Layer2" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
usage = 0

[node name="TestViewportLayer2" parent="Layer2" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="."]

[node name="MovingCamera" type="Camera" parent="."]
current = true
script = ExtResource( 4 )
